--- a/client/pages/index.html
+++ b/client/pages/index.html
@@ -26,10 +26,29 @@
     <section>
         <div class="container">
           <div class="content">
-             <div class="filters"></div>
-             <div class="main"></div>
+             <div class="filters">
+                <div class="filters_cont">
+                 <div class="filter_circle">
+                        <p>asdasd</p>
+                         <p>asdopasdaopsdsdfsdgsma</p>
+                 </div>
+                    <div class="filter_circle">
+                      <p>asdasdas</p>
+                    </div>
+                </div>
+            </div>
+             <div class="main">
+                <p>asdasd</p>
+             </div>
          </div>
      </div>
+    </section>
+    <section>
+        <footer>
+            <div class="container">
+                <p>+7(123)456-78-90</p>
+             </div>
+        </footer>
     </section>
 </body>
 <script src="../assets/js/script.js"></script>
