--- a/client/pages/index.html
+++ b/client/pages/index.html
@@ -15,12 +15,12 @@
                 <p class = "logo_1">Последний Ритуал </p>
                 <p class="logo_2">Похоронное бюро</p>
             </div>
-        <nav class="menu">
-            <ul>
-                <li><a href="#">Услуги</a></li>
-                <li><a href="#">Принадлежности</a></li>
-            </ul>
-        </nav>
+<!--        <nav class="menu">-->
+<!--            <ul>-->
+<!--                <li><a href="#">Услуги</a></li>-->
+<!--                <li><a href="#">Принадлежности</a></li>-->
+<!--            </ul>-->
+<!--        </nav>-->
         </div>
     </header>
     <section>
@@ -32,13 +32,16 @@
                         <p>asdasd</p>
                          <p>asdopasdaopsdsdfsdgsma</p>
                  </div>
-                    <div class="filter_circle">
-                      <p>asdasdas</p>
-                    </div>
                 </div>
             </div>
              <div class="main">
-                <p>asdasd</p>
+                <div class="main_cont">
+                    <div class="img_product"></div>
+                    <div class="txt_product">
+                        <h2 class="name_prod"></h2>
+                        <p class="desc_prod"></p>
+                    </div>
+                </div>
              </div>
          </div>
      </div>
