вывод бд, верстка, фильтрация

--- a/client/pages/index.html
+++ b/client/pages/index.html
@@ -23,35 +23,21 @@
 <!--        </nav>-->
         </div>
     </header>
-    <section>
+    <section class="body">
         <div class="container">
           <div class="content">
              <div class="filters">
-                <div class="filters_cont">
-                 <div class="filter_circle">
-                        <p>asdasd</p>
-                         <p>asdopasdaopsdsdfsdgsma</p>
-                 </div>
-                </div>
+                <div class="filter_circle"></div>
             </div>
              <div class="main">
                 <div class="main_cont">
-                    <div class="img_product"></div>
-                    <div class="txt_product">
-                        <h2 class="name_prod"></h2>
-                        <p class="desc_prod"></p>
+                    <div class="main_content">
+                        <!-- <div class="txt_product"></div> -->
                     </div>
                 </div>
              </div>
          </div>
      </div>
-    </section>
-    <section>
-        <footer>
-            <div class="container">
-                <p>+7(123)456-78-90</p>
-             </div>
-        </footer>
     </section>
 </body>
 <script src="../assets/js/script.js"></script>
